--- a/src/app/components/Content/Lightbox.module.scss
+++ b/src/app/components/Content/Lightbox.module.scss
@@ -26,6 +26,7 @@
   max-height: 50%;
   overflow: auto;
   box-shadow: 0 8px 12px rgba(0, 0, 0, 0.3);
+  text-align: start;
 }
 
 .cardContent {
